<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="weight_text">Weight of the package</string>
    <string name="ounce_text">(in ounces)</string>
    <string name="base_text">Base Cost:</string>
    <string name="add_text">Added Cost:</string>
    <string name="total_cost">Total Shipping Cost:</string>
    <string name="base_cost">$3.00</string>
    <string name= "hint_text">Enter Weight…</string>
</resources>
